--- a/panels/keyboard/cc-keyboard-shortcut-dialog.ui
+++ b/panels/keyboard/cc-keyboard-shortcut-dialog.ui
@@ -3,82 +3,112 @@
   <!-- interface-requires gtk+ 3.0 -->
   <template class="CcKeyboardShortcutDialog" parent="GtkDialog">
     <property name="modal">True</property>
-    <signal name="key-press-event" handler="key_press_cb" object="CcKeyboardShortcutDialog" swapped="yes" />
-    <child internal-child="vbox">
-      <object class="GtkBox">
-        <property name="visible">True</property>
+    <property name="default-width">600</property>
+
+    <child type="titlebar">
+      <object class="GtkHeaderBar" id="headerbar">
+        <property name="show_title_buttons">True</property>
         <child>
-          <object class="GtkSearchEntry" id="search_entry">
-            <property name="visible">True</property>
-            <property name="margin-top">12</property>
-            <property name="width_chars">30</property>
-            <property name="halign">center</property>
-            <signal name="notify::text" handler="search_entry_cb" object="CcKeyboardShortcutDialog" swapped="yes" />
+          <object class="GtkStack" id="header_stack">
+            <property name="hhomogeneous">False</property>
+            <property name="vhomogeneous">False</property>
+            <property name="transition-type">crossfade</property>
+
+            <child>
+              <object class="GtkButton" id="back_button">
+                <property name="halign">start</property>
+                <property name="valign">center</property>
+                <property name="icon_name">go-previous-symbolic</property>
+                <property name="use-underline">True</property>
+                <signal name="clicked" handler="back_button_clicked_cb" object="CcKeyboardShortcutDialog" swapped="yes" />
+                <style>
+                  <class name="image-button"/>
+                </style>
+                <accessibility>
+                  <property name="label">Back</property>
+                </accessibility>
+              </object>
+            </child>
+
+            <child>
+              <object class="GtkButton" id="reset_all_button">
+                <property name="label" translatable="yes">Reset All…</property>
+                <property name="tooltip-text" translatable="yes">Reset all shortcuts to their default keybindings</property>
+                <signal name="clicked" handler="reset_all_clicked_cb" object="CcKeyboardShortcutDialog" swapped="yes" />
+              </object>
+            </child>
+
           </object>
         </child>
+      </object>
+    </child>
+
+    <child>
+      <object class="GtkScrolledWindow">
+        <property name="hexpand">True</property>
+        <property name="vexpand">True</property>
+        <property name="hscrollbar_policy">never</property>
+        <property name="propagate_natural_width">True</property>
+        <property name="propagate_natural_height">True</property>
+        <property name="max_content_height">450</property>
         <child>
-          <object class="GtkStack" id="stack">
-            <property name="visible">True</property>
+          <object class="GtkBox">
+            <property name="orientation">vertical</property>
             <child>
-              <object class="GtkScrolledWindow" id="section_scrolled_window">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
+              <object class="GtkSearchEntry" id="search_entry">
+                <property name="margin-top">12</property>
+                <property name="width_chars">30</property>
+                <property name="halign">center</property>
+                <signal name="notify::text" handler="search_entry_cb" object="CcKeyboardShortcutDialog" swapped="yes" />
+              </object>
+            </child>
+            <child>
+              <object class="GtkStack" id="stack">
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
-                <property name="hscrollbar_policy">never</property>
-                <property name="propagate_natural_width">True</property>
-                <property name="propagate_natural_height">True</property>
-                <property name="max_content_height">450</property>
+                <property name="hhomogeneous">False</property>
+                <property name="vhomogeneous">False</property>
                 <child>
-                  <object class="GtkBox">
-                    <property name="visible">True</property>
+                  <object class="GtkBox" id="section_box">
                     <property name="orientation">vertical</property>
-                    <property name="border_width">12</property>
+                    <property name="margin-top">12</property>
+                    <property name="margin-bottom">12</property>
+                    <property name="margin-start">12</property>
+                    <property name="margin-end">12</property>
                     <child>
                       <object class="GtkListBox" id="section_listbox">
-                        <property name="visible">True</property>
                         <property name="selection-mode">none</property>
-                        <property name="border_width">12</property>
+                        <property name="margin-top">12</property>
+                        <property name="margin-bottom">12</property>
+                        <property name="margin-start">12</property>
+                        <property name="margin-end">12</property>
                         <signal name="row-activated" handler="section_row_activated" object="CcKeyboardShortcutDialog" swapped="no" />
                         <style>
-                          <class name="frame" />
+                          <class name="content" />
                         </style>
                       </object>
                     </child>
                   </object>
                 </child>
-              </object>
-            </child>
-            <child>
-              <object class="GtkScrolledWindow" id="shortcut_scrolled_window">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="hexpand">True</property>
-                <property name="vexpand">True</property>
-                <property name="hscrollbar_policy">never</property>
-                <property name="propagate_natural_width">True</property>
-                <property name="propagate_natural_height">True</property>
-                <property name="max_content_height">450</property>
                 <child>
-                  <object class="GtkBox">
-                    <property name="visible">True</property>
+                  <object class="GtkBox" id="shortcut_box">
                     <property name="orientation">vertical</property>
-                    <property name="border_width">12</property>
+                    <property name="margin-top">12</property>
+                    <property name="margin-bottom">12</property>
+                    <property name="margin-start">12</property>
+                    <property name="margin-end">12</property>
                     <property name="spacing">12</property>
                     <child>
                       <object class="GtkListBox" id="shortcut_listbox">
-                        <property name="visible">True</property>
                         <property name="selection-mode">none</property>
                         <style>
-                          <class name="frame" />
+                          <class name="content" />
                         </style>
                         <signal name="row-activated" handler="shortcut_row_activated" object="CcKeyboardShortcutDialog" swapped="no" />
                         <child>
                           <object class="GtkListBoxRow" id="custom_shortcut_add_row">
-                             <property name="visible">True</property>
                              <child>
                               <object class="GtkImage">
-                                <property name="visible">True</property>
                                 <property name="hexpand">True</property>
                                 <property name="icon_name">list-add-symbolic</property>
                                 <property name="height_request">48</property>
@@ -90,160 +120,96 @@
                     </child>
                   </object>
                 </child>
-              </object>
-            </child>
-            <child>
-              <object class="GtkBox" id="empty_custom_shortcuts_placeholder">
-                <property name="visible">True</property>
-                <property name="orientation">vertical</property>
-                <property name="border_width">18</property>
-                <property name="spacing">18</property>
-                <property name="valign">center</property>
-                <style>
-                  <class name="background"/>
-                </style>
                 <child>
-                  <object class="GtkImage">
-                    <property name="visible">True</property>
-                    <property name="icon-name">input-keyboard-symbolic</property>
-                    <property name="pixel-size">128</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="visible">True</property>
-                    <property name="label" translatable="yes">Add Custom Shortcuts</property>
-                    <attributes>
-                      <attribute name="weight" value="bold" />
-                    </attributes>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="visible">True</property>
-                    <property name="label" translatable="yes">Set up custom shortcuts for launching apps, running scripts, and more.</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkButton">
-                    <property name="visible">True</property>
-                    <property name="halign">center</property>
-                    <property name="label" translatable="yes">Add Shortcut</property>
+                  <object class="GtkBox" id="empty_custom_shortcuts_placeholder">
+                    <property name="orientation">vertical</property>
+                    <property name="margin-top">18</property>
+                    <property name="margin-bottom">18</property>
+                    <property name="margin-start">18</property>
+                    <property name="margin-end">18</property>
+                    <property name="spacing">18</property>
+                    <property name="valign">center</property>
                     <style>
-                      <class name="suggested-action" />
+                      <class name="background"/>
                     </style>
-                    <signal name="clicked" handler="add_custom_shortcut_clicked_cb" object="CcKeyboardShortcutDialog" swapped="yes" />
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child>
-              <object class="GtkBox" id="empty_search_placeholder">
-              <property name="visible">True</property>
-              <property name="can_focus">False</property>
-              <property name="halign">center</property>
-              <property name="valign">center</property>
-              <property name="hexpand">True</property>
-              <property name="vexpand">True</property>
-              <property name="border_width">18</property>
-              <property name="orientation">vertical</property>
-              <property name="spacing">6</property>
-              <child>
-                <object class="GtkImage">
-                  <property name="visible">True</property>
-                  <property name="can_focus">False</property>
-                  <property name="pixel_size">80</property>
-                  <property name="icon_name">edit-find-symbolic</property>
-                  <style>
-                    <class name="dim-label"/>
-                  </style>
-                </object>
-              </child>
-              <child>
-                <object class="GtkLabel">
-                  <property name="visible">True</property>
-                  <property name="can_focus">False</property>
-                  <property name="label" translatable="yes">No keyboard shortcut found</property>
-                  <attributes>
-                    <attribute name="weight" value="bold"/>
-                    <attribute name="scale" value="1.44"/>
-                  </attributes>
-                </object>
-              </child>
-              <child>
-                <object class="GtkLabel">
-                  <property name="visible">True</property>
-                  <property name="can_focus">False</property>
-                  <property name="label" translatable="yes">Try a different search</property>
-                  <style>
-                    <class name="dim-label"/>
-                  </style>
-                </object>
-              </child>
-            </object>
-            </child>
-          </object>
-        </child>
-      </object>
-    </child>
-    <child type="titlebar">
-      <object class="GtkHeaderBar" id="headerbar">
-        <property name="visible">True</property>
-        <property name="show_close_button">True</property>
-        <child>
-          <object class="GtkRevealer" id="back_revealer">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="transition-type">crossfade</property>
-            <child>
-              <object class="GtkButton" id="back">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="receives_default">False</property>
-                <property name="valign">center</property>
-                <property name="use-underline">True</property>
-                <signal name="clicked" handler="back_button_clicked_cb" object="CcKeyboardShortcutDialog" swapped="yes" />
-                <style>
-                  <class name="image-button"/>
-                </style>
-                <child internal-child="accessible">
-                  <object class="AtkObject" id="a11y-back">
-                    <property name="accessible-name" translatable="yes">Back</property>
+                    <child>
+                      <object class="GtkImage">
+                        <property name="icon-name">input-keyboard-symbolic</property>
+                        <property name="pixel-size">128</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="label" translatable="yes">Add Custom Shortcuts</property>
+                        <attributes>
+                          <attribute name="weight" value="bold" />
+                        </attributes>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="label" translatable="yes">Set up custom shortcuts for launching apps, running scripts, and more.</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkButton">
+                        <property name="halign">center</property>
+                        <property name="label" translatable="yes">Add Shortcut</property>
+                        <style>
+                          <class name="suggested-action" />
+                        </style>
+                        <signal name="clicked" handler="add_custom_shortcut_clicked_cb" object="CcKeyboardShortcutDialog" swapped="yes" />
+                      </object>
+                    </child>
                   </object>
                 </child>
                 <child>
-                  <object class="GtkImage" id="back_image">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="icon_name">go-previous-symbolic</property>
-                    <property name="icon_size">1</property>
-                  </object>
+                  <object class="GtkBox" id="empty_search_placeholder">
+                  <property name="halign">center</property>
+                  <property name="valign">center</property>
+                  <property name="hexpand">True</property>
+                  <property name="vexpand">True</property>
+                  <property name="margin-top">18</property>
+                  <property name="margin-bottom">18</property>
+                  <property name="margin-start">18</property>
+                  <property name="margin-end">18</property>
+                  <property name="orientation">vertical</property>
+                  <property name="spacing">6</property>
+                  <child>
+                    <object class="GtkImage">
+                      <property name="pixel_size">80</property>
+                      <property name="icon_name">edit-find-symbolic</property>
+                      <style>
+                        <class name="dim-label"/>
+                      </style>
+                    </object>
+                  </child>
+                  <child>
+                    <object class="GtkLabel">
+                      <property name="label" translatable="yes">No keyboard shortcut found</property>
+                      <attributes>
+                        <attribute name="weight" value="bold"/>
+                        <attribute name="scale" value="1.44"/>
+                      </attributes>
+                    </object>
+                  </child>
+                  <child>
+                    <object class="GtkLabel">
+                      <property name="label" translatable="yes">Try a different search</property>
+                      <style>
+                        <class name="dim-label"/>
+                      </style>
+                    </object>
+                  </child>
+                </object>
                 </child>
               </object>
             </child>
           </object>
         </child>
-        <child>
-          <object class="GtkRevealer" id="reset_all_revealer">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="transition-type">crossfade</property>
-            <child>
-              <object class="GtkButton" id="reset_all_button">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="label" translatable="yes">Reset All…</property>
-                <property name="tooltip-text" translatable="yes">Reset all shortcuts to their default keybindings</property>
-                <signal name="clicked" handler="reset_all_clicked_cb" object="CcKeyboardShortcutDialog" swapped="yes" />
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="pack_type">end</property>
-          </packing>
-        </child>
       </object>
     </child>
+
   </template>
   <object class="GtkSizeGroup" id="accelerator_sizegroup" />
 </interface>
