--- a/panels/region/cc-format-chooser.ui
+++ b/panels/region/cc-format-chooser.ui
@@ -2,9 +2,7 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <template class="CcFormatChooser" parent="GtkDialog">
-    <property name="can_focus">False</property>
     <property name="title" translatable="yes">Formats</property>
-    <property name="type_hint">dialog</property>
     <property name="modal">True</property>
     <property name="default-width">700</property>
     <property name="default-height">500</property>
@@ -12,17 +10,15 @@
     <!-- Titlebar -->
     <child type="titlebar">
       <object class="GtkHeaderBar" id="title_bar">
-        <property name="visible">1</property>
 
         <child>
           <object class="GtkStack" id="title_buttons">
-            <property name="visible">1</property>
-            <property name="homogeneous">0</property>
+            <property name="hhomogeneous">False</property>
+            <property name="vhomogeneous">False</property>
 
             <!-- Cancel button -->
             <child>
               <object class="GtkButton" id="cancel_button">
-                <property name="visible">1</property>
                 <property name="valign">center</property>
                 <property name="use-underline">1</property>
                 <property name="label" translatable="yes">_Cancel</property>
@@ -32,33 +28,22 @@
             <!-- Back button -->
             <child>
               <object class="GtkButton" id="back_button">
-                <property name="visible">1</property>
+                <property name="icon_name">go-previous-symbolic</property>
                 <signal name="clicked" handler="format_chooser_back_button_clicked_cb" object="CcFormatChooser" swapped="yes" />
                 <style>
                   <class name="image-button" />
                 </style>
-                <child>
-                  <object class="GtkImage">
-                    <property name="visible">1</property>
-                    <property name="icon_name">go-previous-symbolic</property>
-                  </object>
-                </child>
-                <child internal-child="accessible">
-                  <object class="AtkObject">
-                    <property name="accessible-name" translatable="yes">Back</property>
-                  </object>
-                </child>
+                <accessibility>
+                  <property name="label" translatable="yes">Back</property>
+                </accessibility>
               </object>
             </child>
 
           </object>
         </child>
 
-        <child>
+        <child type="end">
           <object class="GtkButton" id="done_button">
-            <property name="visible">1</property>
-            <property name="can-default">1</property>
-            <property name="receives-default">1</property>
             <property name="valign">center</property>
             <property name="use-underline">1</property>
             <property name="label" translatable="yes">_Done</property>
@@ -66,36 +51,26 @@
              <class name="suggested-action" />
             </style>
           </object>
-          <packing>
-            <property name="pack-type">end</property>
-          </packing>
         </child>
 
       </object>
     </child>
-    <child internal-child="vbox">
+    <child>
       <object class="GtkBox" id="dialog-vbox1">
-        <property name="can_focus">False</property>
-        <property name="border-width">0</property>
         <property name="orientation">vertical</property>
         <child>
-          <object class="HdyLeaflet" id="main_leaflet">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
+          <object class="AdwLeaflet" id="main_leaflet">
             <property name="hexpand">True</property>
             <property name="vexpand">True</property>
             <signal name="notify::fold" handler="format_chooser_leaflet_fold_changed_cb" object="CcFormatChooser" swapped="yes"/>
             <child>
-              <object class="GtkBox">
-                <property name="visible">True</property>
+              <object class="GtkBox" id="region_box">
                 <property name="margin-top">18</property>
-                <property name="can_focus">False</property>
                 <property name="vexpand">True</property>
                 <property name="orientation">vertical</property>
 
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">True</property>
                     <property name="margin-start">18</property>
                     <property name="margin-end">18</property>
                     <property name="label" translatable="yes">Choose the format for numbers, dates and currencies. Changes take effect on next login.</property>
@@ -111,9 +86,7 @@
                 <!-- Language search -->
                 <child>
                   <object class="GtkSearchEntry" id="region_filter_entry">
-                    <property name="visible">True</property>
                     <property name="hexpand">True</property>
-                    <property name="can_focus">True</property>
                     <property name="placeholder-text" translatable="yes">Search locales…</property>
                     <property name="margin-top">12</property>
                     <property name="margin-bottom">18</property>
@@ -125,7 +98,6 @@
 
                 <child>
                   <object class="GtkSeparator">
-                    <property name="visible">1</property>
                     <style>
                       <class name="sidebar" />
                     </style>
@@ -135,26 +107,23 @@
                 <!-- Language format list -->
                 <child>
                   <object class="GtkStack" id="region_list_stack">
-                    <property name="visible">True</property>
                     <child>
                       <object class="GtkScrolledWindow" id="region_list">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
                         <property name="vexpand">True</property>
                         <property name="hscrollbar_policy">never</property>
                         <property name="vscrollbar_policy">automatic</property>
                         <property name="propagate-natural-height">True</property>
                         <child>
                           <object class="GtkBox">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="margin">18</property>
+                            <property name="margin-top">18</property>
+                            <property name="margin-bottom">18</property>
+                            <property name="margin-start">18</property>
+                            <property name="margin-end">18</property>
                             <property name="orientation">vertical</property>
 
                             <!-- Common formats title -->
                             <child>
                               <object class="GtkLabel" id="common_region_title">
-                                <property name="visible">True</property>
                                 <property name="label" translatable="yes">Common Formats</property>
                                 <property name="halign">start</property>
                                 <property name="margin-bottom">6</property>
@@ -170,14 +139,12 @@
                             <!-- Common formats list -->
                             <child>
                               <object class="GtkListBox" id="common_region_listbox">
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
                                 <property name="vexpand">True</property>
                                 <property name="margin-bottom">24</property>
                                 <property name="selection-mode">none</property>
                                 <signal name="row-activated" handler="row_activated" object="CcFormatChooser" swapped="yes" />
                                 <style>
-                                 <class name="frame" />
+                                 <class name="content" />
                                 </style>
                               </object>
                             </child>
@@ -185,7 +152,6 @@
                             <!-- Complete formats title -->
                             <child>
                               <object class="GtkLabel" id="region_title">
-                                <property name="visible">True</property>
                                 <property name="label" translatable="yes">All Formats</property>
                                 <property name="halign">start</property>
                                 <property name="margin-bottom">6</property>
@@ -201,15 +167,13 @@
                             <!-- Complete formats list -->
                             <child>
                               <object class="GtkListBox" id="region_listbox">
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
                                 <property name="vexpand">True</property>
                                 <property name="halign">fill</property>
                                 <property name="valign">start</property>
                                 <property name="selection-mode">none</property>
                                 <signal name="row-activated" handler="row_activated" object="CcFormatChooser" swapped="yes" />
                                 <style>
-                                 <class name="frame" />
+                                 <class name="content" />
                                 </style>
                               </object>
                             </child>
@@ -222,7 +186,6 @@
                     <!-- Empty search results view -->
                     <child>
                       <object class="GtkBox" id="empty_results_view">
-                        <property name="visible">True</property>
                         <property name="valign">center</property>
                         <property name="halign">center</property>
                         <property name="hexpand">False</property>
@@ -231,14 +194,12 @@
                         <property name="spacing">6</property>
                         <child>
                           <object class="GtkImage">
-                            <property name="visible">True</property>
                             <property name="icon-name">system-search-symbolic</property>
                             <property name="pixel-size">64</property>
                           </object>
                         </child>
                         <child>
                           <object class="GtkLabel">
-                            <property name="visible">True</property>
                             <property name="label" translatable="yes">No Search Results</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
@@ -248,7 +209,6 @@
                         </child>
                         <child>
                           <object class="GtkLabel">
-                            <property name="visible">True</property>
                             <property name="wrap">True</property>
                             <property name="max-width-chars">24</property>
                             <property name="justify">center</property>
@@ -265,14 +225,10 @@
                 </child>
 
               </object>
-              <packing>
-                <property name="name">region-list</property>
-              </packing>
             </child>
 
             <child>
               <object class="GtkSeparator" id="panel_separator">
-                <property name="visible">1</property>
                 <property name="orientation">vertical</property>
                 <style>
                  <class name="sidebar" />
@@ -282,16 +238,13 @@
 
             <!-- Format preview -->
             <child>
-              <object class="GtkBox">
-                <property name="visible">1</property>
+              <object class="GtkBox" id="preview_box">
                 <property name="orientation">vertical</property>
                 <style>
                   <class name="view" />
                 </style>
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
                     <property name="margin_top">24</property>
                     <property name="margin_bottom">6</property>
                     <property name="halign">center</property>
@@ -306,7 +259,6 @@
                 </child>
                 <child>
                   <object class="CcFormatPreview" id="format_preview">
-                    <property name="visible">1</property>
                     <property name="width-request">300</property>
                   </object>
                 </child>
